Spacing fix, card holder ready

--- a/Mythic/style.css
+++ b/Mythic/style.css
@@ -24,6 +24,20 @@
     text-align: center;
 }
 
+#cardHolder {
+    /* display: grid;
+    grid-auto-flow: column dense;
+    grid-auto-columns: minmax(10px, auto);
+
+    width: 30vw;
+    left: 100%; */
+}
+
+#cardHolder div {
+    gap: -200px;
+    flex-direction: column;
+}
+
 .sample {
     display: none !important;
 }
@@ -100,7 +114,7 @@ button:active {
     display: inline-grid;
     align-self: center;
     outline: #453b80 solid 3px;
-    background-color: #6b71ed55;
+    background-color: #7078ff;
 
     border-radius: 5px;
     padding-top: 30px;
@@ -125,6 +139,11 @@ button:active {
     font-family: "Marcellus", serif;
     
     font-weight: 100;
+}
+
+#diceResultText {
+    padding-top: 20px;
+    font-size: 1em;
 }
 
 ::selection {
